@@ -1357,6 +1357,19 @@ namespace libtorrent
 		for (int i = 0; i < int(m_trackers.size()); ++i)
 		{
 			announce_entry& ae = m_trackers[i];
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
+			char msg[1000];
+			snprintf(msg, sizeof(msg), "*** announce with tracker: considering \"%s\" "
+				"[ announce_to_all_tiers: %d announce_to_all_trackers: %d"
+				" i->tier: %d tier: %d "
+				" is_working: %d fails: %d fail_limit: %d updating: %d"
+				" can_announce: %d sent_announce: %d ]"
+				, ae.url.c_str(), m_settings.announce_to_all_tiers
+				, m_settings.announce_to_all_trackers
+				, ae.tier, tier, ae.is_working(), ae.fails, ae.fail_limit
+				, ae.updating, ae.can_announce(now, is_seed()), sent_announce);
+			debug_log(msg);
+#endif
 			if (m_settings.announce_to_all_tiers
 				&& !m_settings.announce_to_all_trackers
 				&& sent_announce
@@ -1364,7 +1377,7 @@ namespace libtorrent
 				&& tier != INT_MAX)
 				continue;
 
-			if (ae.tier > tier && !m_settings.announce_to_all_tiers) break;
+			if (ae.tier > tier && sent_announce && !m_settings.announce_to_all_tiers) break;
 			if (ae.is_working()) { tier = ae.tier; sent_announce = false; }
 			if (!ae.can_announce(now, is_seed()))
 			{
@@ -5274,7 +5287,13 @@ namespace libtorrent
 
 	void torrent::update_tracker_timer(ptime now)
 	{
-		if (!m_announcing) return;
+		if (!m_announcing)
+		{
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING || defined TORRENT_ERROR_LOGGING
+			debug_log("*** update tracker timer: not announcing");
+#endif
+			return;
+		}
 
 		ptime next_announce = max_time();
 		int tier = INT_MAX;
@@ -5284,6 +5303,18 @@ namespace libtorrent
 		for (std::vector<announce_entry>::iterator i = m_trackers.begin()
 			, end(m_trackers.end()); i != end; ++i)
 		{
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
+			char msg[1000];
+			snprintf(msg, sizeof(msg), "*** update tracker timer: considering \"%s\" "
+				"[ announce_to_all_tiers: %d announce_to_all_trackers: %d"
+				" found_working: %d i->tier: %d tier: %d "
+				" is_working: %d fails: %d fail_limit: %d updating: %d ]"
+				, i->url.c_str(), m_settings.announce_to_all_tiers
+				, m_settings.announce_to_all_trackers, found_working
+				, i->tier, tier, i->is_working(), i->fails, i->fail_limit
+				, i->updating);
+			debug_log(msg);
+#endif
 			if (m_settings.announce_to_all_tiers
 				&& found_working
 				&& i->tier <= tier
@@ -5304,7 +5335,14 @@ namespace libtorrent
 				&& !m_settings.announce_to_all_tiers) break;
 		}
 
-		if (next_announce <= now) return;
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
+		char msg[200];
+		snprintf(msg, sizeof(msg), "*** update tracker timer: next_announce < now %d"
+			" m_waiting_tracker: %d next_announce_in: %d"
+			, next_announce <= now, m_waiting_tracker, total_seconds(now - next_announce));
+		debug_log(msg);
+#endif
+		if (next_announce <= now) next_announce = now;
 
 		m_waiting_tracker = true;
 		error_code ec;
@@ -6193,7 +6231,7 @@ namespace libtorrent
 		INVARIANT_CHECK;
 
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING || defined TORRENT_ERROR_LOGGING
-		debug_log("*** tracker timed out");
+		debug_log("*** tracker timed out [" + r.url + "]");
 #endif
 
 		if (r.kind == tracker_request::announce_request)
@@ -6202,6 +6240,10 @@ namespace libtorrent
 			if (ae)
 			{
 				ae->failed();
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING || defined TORRENT_ERROR_LOGGING
+				debug_log("*** increment tracker fail count ["
+					+ std::string(to_string(ae->fails).elems) + "]");
+#endif
 				int tracker_index = ae - &m_trackers[0];
 				deprioritize_tracker(tracker_index);
 			}
